--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=web-app
+server.port = 9090
 
 spring.datasource.url=jdbc:trino://localhost:8082/postgresql
 spring.datasource.username=admin
@@ -8,9 +9,10 @@ spring.datasource.driver-class-name=io.trino.jdbc.TrinoDriver
 
 spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
 spring.flyway.user=postgres
-spring.flyway.password=
+spring.flyway.password=123456
 spring.flyway.locations=classpath:db/migration
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
