--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=io.trino.jdbc.TrinoDriver
 
 spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
 spring.flyway.user=postgres
-spring.flyway.password=123456
+spring.flyway.password=
 spring.flyway.locations=classpath:db/migration
 
 spring.jpa.hibernate.ddl-auto=update
