--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
+    "@primevue/forms": "^4.3.9",
+    "@primevue/themes": "^4.3.9",
     "axios": "^1.11.0",
     "mande": "^2.0.9",
     "pinia": "^3.0.3",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
